updating after final blade tip and drivetrain check

--- a/WISDEM/IEA-15-240-RWT.yaml
+++ b/WISDEM/IEA-15-240-RWT.yaml
@@ -586,20 +586,20 @@ assembly:
         monopile_embedment: 45
         transition_height: 15
     mass:
-        generator: 371.95
-        turret: 13.362
-        bedplate: 39.434
-        shaft: 19.504
-        main_bearing: 4.699
-        flange: 3.627
+        generator: 371.5917
+        turret: 11.394
+        bedplate: 70.329
+        shaft: 15.734
+        main_bearing_srb: 5.664
+        main_bearing_tdo: 2.230
+        flange: 3.946
         yaw_system: 100.0
-        other: 50.0
-        blade: 65.8
+        blade: 65.252
         hub: 190.0
-        nacelle_other: 100.0
-        nacelle: 797.275
-        rna: 994.72
-        rna_center_of_mass: [-7.65265556, 0.0, 4.6022611]
+        nacelle_other: 50.0
+        nacelle: 630.888
+        rna: 1016.645
+        rna_center_of_mass: [-6.47601681, 0., 4.2691133]
         tower: 859.8
         monopile: 1317.7
     control:
