--- a/WISDEM/modeling_options.yaml
+++ b/WISDEM/modeling_options.yaml
@@ -7,7 +7,9 @@ WISDEM:
         n_pitch_perf_surfaces: 5
         n_tsr_perf_surfaces: 5
         spar_cap_ss: Spar_Cap_SS # Name in the yaml of the spar cap laminate on the suction side
-        spar_cap_ps: Spar_Cap_PS # Name in the yaml of the spar cap laminate on the suction side
+        spar_cap_ps: Spar_Cap_PS # Name in the yaml of the spar cap laminate on the pressure side
+        te_ss: TE_reinforcement_SS # Name in the yaml of the trailing edge reinforcement laminate on the suction side
+        te_ps: TE_reinforcement_PS # Name in the yaml of the trailing edge reinforcement laminate on the pressure side
         gust_std: 0.0
         n_span: 60
         n_pc: 50
