--- a/WISDEM/analysis_options_floating_tower.yaml
+++ b/WISDEM/analysis_options_floating_tower.yaml
@@ -11,7 +11,7 @@ design_variables:
     layer_thickness:
       flag: True
       lower_bound: 4e-3
-      upper_bound: 2e-1
+      upper_bound: 8e-2
 
 merit_figure: tower_mass
 
@@ -28,25 +28,25 @@ constraints:
       lower_bound: 50.0
       upper_bound: 500.0
     taper:
-      flag: True
+      flag: False #True
       lower_bound: 0.2
     slope:
       flag: True
     frequency_1:
       flag: True
-      lower_bound: 0.49
-      upper_bound: 0.60
+      lower_bound: 0.48
+      upper_bound: 0.65
 
 driver:
     optimization:
         flag: True         # Flag to enable optimization
-        tol: 1.e-6          # Optimality tolerance
-        max_major_iter: 10    # Maximum number of major design iterations (SNOPT)
-        max_minor_iter: 100   # Maximum number of minor design iterations (SNOPT)
+        tol: 1.e-8          # Optimality tolerance
+        max_major_iter: 50    # Maximum number of major design iterations (SNOPT)
+        max_minor_iter: 200   # Maximum number of minor design iterations (SNOPT)
         max_iter: 100         # Maximum number of iterations (SLSQP)
         solver: SNOPT         # Optimization solver. Other options are 'SLSQP' - 'CONMIN'
-        step_size: 1.e-6      # Step size for finite differencing
-        form: forward       # Finite differencing mode, either forward or central
+        step_size: 1.e-4      # Step size for finite differencing
+        form: central       # Finite differencing mode, either forward or central
     
 recorder:
     flag: False              # Flag to activate OpenMDAO recorder
