removed redunant grid points for tower & monopile

--- a/WT_Ontology/IEA-15-240-RWT.yaml
+++ b/WT_Ontology/IEA-15-240-RWT.yaml
@@ -457,11 +457,11 @@ components:
                     grid: [0.0, 1.0]
                     values: [0.0, 0.0]
                 z:
-                    grid: &grid_tower [0.0, 7.728811463372998e-05, 0.10047454902385111, 0.10055183713848485, 0.20094909804770222, 0.20102638616233595, 0.30142364707155334, 0.30150093518618704, 0.40189819609540445, 0.40197548421003826, 0.5023727451192556, 0.5024500332338894, 0.6028472941431067, 0.6029245822577405, 0.7033218431669578, 0.7033991312815916, 0.8037963921908089, 0.8038736803054427, 0.90427094121466, 0.9043482293292937, 1.0]
-                    values: [15, 15.01, 28, 28.01, 41, 41.01, 54, 54.01, 67, 67.01, 80, 80.01, 93, 93.01, 106, 106.01, 119, 119.01, 132, 132.01, 144.386]
+                    grid: &grid_tower [0.0, 0.10047455, 0.2009491 , 0.30142365, 0.4018982, 0.50237275, 0.60284729, 0.70332184, 0.80379639, 0.90427094, 1.0]
+                    values: [15, 28, 41, 54, 67, 80, 93, 106, 119, 132, 144.386]
             outer_diameter:
                 grid: *grid_tower
-                values: [10., 10., 10., 10., 9.926, 9.926, 9.443, 9.443, 8.833, 8.833, 8.151, 8.151, 7.39, 7.39, 6.909, 6.909, 6.748, 6.748, 6.572, 6.572, 6.5]
+                values:  [10.0, 10.0, 9.926, 9.443, 8.833, 8.151, 7.39, 6.909, 6.748, 6.572, 6.5]
             drag_coefficient:
                 grid: [0.0, 1.0]
                 values: [0.5, 0.5]
@@ -473,7 +473,7 @@ components:
                   material: steel
                   thickness:
                     grid: *grid_tower
-                    values: [0.041058, 0.039496, 0.039496, 0.036456, 0.036456, 0.033779, 0.033779, 0.032192, 0.032192, 0.030708, 0.030708, 0.029101, 0.029101, 0.027213, 0.027213, 0.024009, 0.024009, 0.020826, 0.020826, 0.023998, 0.023998]
+                    values: [0.039496, 0.039496, 0.033416, 0.034142, 0.030242, 0.031174, 0.027028, 0.027398, 0.02062 , 0.021032, 0.026964]
     monopile:
         transition_piece_mass: 100e3
         outer_shape_bem:
@@ -485,11 +485,11 @@ components:
                     grid: [0.0, 1.0]
                     values: [0.0, 0.0]
                 z:
-                    grid: &grid_mono [0.0, 0.5, 0.50001111, 0.55555556, 0.55556667, 0.61111111, 0.61112222, 0.66666667, 0.66667778, 0.72222222, 0.72223333, 0.77777778, 0.77778889, 0.83333333, 0.83334444, 0.88888889, 0.8889  , 0.94444444, 0.94445556, 1.0]
-                    values: [-75, -30., -29.999, -25., -24.999, -20., -19.999, -15., -14.999, -10., -9.999, -5., -4.999, 0., 0.001, 5., 5.001, 10., 10.001, 15.]
+                    grid: &grid_mono [0.0, 0.5, 0.61111111, 0.72222222, 0.83333333, 0.94444444, 1.0]
+                    values: [-75, -30., -20., -10., 0., 10., 15.]
             outer_diameter:
                 grid: *grid_mono
-                values: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
+                values: [10., 10., 10., 10., 10., 10., 10.]
             drag_coefficient:
                 grid: [0.0, 1.0]
                 values: [0.5, 0.5]
@@ -501,7 +501,7 @@ components:
                   material: steel
                   thickness:
                     grid: *grid_mono
-                    values: [0.055341, 0.055341, 0.055341, 0.055341, 0.053449, 0.053449, 0.051509, 0.051509, 0.049527, 0.049527, 0.047517, 0.047517, 0.045517, 0.045517, 0.043527, 0.043527, 0.042242, 0.042242, 0.041058, 0.041058]
+                    values: [0.055341, 0.055341, 0.055341, 0.047677, 0.047357, 0.039697, 0.042419]
 airfoils:
    -  name: circular
       coordinates:
