--- a/WT_Ontology/IEA-15-240-RWT_VolturnUS-S.yaml
+++ b/WT_Ontology/IEA-15-240-RWT_VolturnUS-S.yaml
@@ -510,15 +510,15 @@ components:
               cylindrical: True
 
             - name: anchor1
-              location: [837.6, 3.14159265, -200.0] #3.14159265 = 180deg
+              location: [837.8, 3.14159265, -200.0]
               cylindrical: True
 
             - name: anchor2
-              location: [837.6, 1.0471976, -200.0] #1.0471975 = 60 deg
+              location: [837.8, 1.0471976, -200.0]  # 1.0471975 = 60 deg
               cylindrical: True
 
             - name: anchor3
-              location: [837.6, -1.0471976, -200.0] #-1.0471975 = -60 deg
+              location: [837.8, -1.0471976, -200.0]  #-1.0471975 = -60 deg
               cylindrical: True
 
         members:
