--- a/tests/environment.yml
+++ b/tests/environment.yml
@@ -5,15 +5,34 @@ channels:
   - defaults
 
 dependencies:
+  - bcrypt
+  - future
+  - cached-property
   - chardet
+  - click
+  - coverage
+  - h5py
+  - jinja2
+  - markupsafe
   - matplotlib
+  - numexpr
   - numpy
   - openpyxl
   - pandas
+  - paramiko
   - pyarrow
+  - pynacl
   - pytest
+  - pytest-cov
+  - psutil
+  - pbr
+  - pytables
+  - sshtunnel
   - simpy
+  - tomli
   - wisdem
+  - xlrd
+  - xlwt
   - pip:
     - wetb
     - marmot-agents
