--- a/.github/workflows/CI_IEA15.yml
+++ b/.github/workflows/CI_IEA15.yml
@@ -51,3 +51,31 @@ jobs:
         run: |
           cd WISDEM
           python run_model.py
+
+      # Run OpenFAST monopile-ROSCO
+      - name: Run OpenFAST fixed-bottom with ROSCO
+        shell: bash -l {0}
+        run: |
+          cd OpenFAST/IEA-15-240-RWT-Monopile
+          openfast IEA-15-240-RWT-Monopile.fst
+
+      # Run OpenFAST monopile-DTU
+      - name: Run OpenFAST fixed-bottom with DTU controller
+        shell: bash -l {0}
+        run: |
+          cd OpenFAST/IEA-15-240-RWT-Monopile_wDTUcontroller
+          openfast IEA-15-240-RWT-Monopile_wDTUcontroller.fst
+
+      # Run OpenFAST floating
+      - name: Run OpenFAST floating
+        shell: bash -l {0}
+        run: |
+          cd OpenFAST/IEA-15-240-RWT-UMaineSemi
+          openfast IEA-15-240-RWT-UMaineSemi.fst
+
+      # Run OpenFAST monopile-OLAF
+      - name: Run OpenFAST fixed-bottom with OLAF
+        shell: bash -l {0}
+        run: |
+          cd OpenFAST/IEA-15-240-RWT-OLAF
+          openfast IEA-15-240-RWT_OLAF.fst
